--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,22 +1,26 @@
 <html>
         <head>
-            <title>Django Girls blog</title>
+            <title>Django Blog</title>
         </head>
         <body>
             <div>
-                <h1><a href="">Django Girls Blog</a></h1>
+                <h1><a href="">Блог окловсяческий наук</a></h1>
             </div>
 
             <div>
                 <p>published: 14.06.2014, 12:14</p>
-                <h2><a href="">My first post</a></h2>
-                <p>Привет</p>
+                <h2><a href="">Разница в днях между двумя датами</a></h2>
+                <p>from datetime import datetime<p>
+                <p>def days_diff(date1, date2):<p>
+                <p>return abs((datetime(*date1)-datetime(*date2)).days)</p>
             </div>
 
             <div>
-                <p>published: 14.06.2014, 12:14</p>
-                <h2><a href="">My second post</a></h2>
-                <p>Пока</p>
+                <p><h0>published: 14.06.2014, 12:14<h0></p>
+                <h2><a href="">Сколько пятниц 13 в году</a></h2>
+                <p>from datetime import datetime</p>
+		<p>def checkios(year):</p>
+		<p> return sum(datetime(year, month, 13).weekday() == 4 for month in range(1, 13))</p>
             </div>
         </body>
     </html>
