--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,7 +4,7 @@
         </head>
         <body>
             <div>
-                <h1><a href="">Блог окловсяческий наук</a></h1>
+                <h1><a href="">Блог околовсяческий наук</a></h1>
             </div>
 
             <div>
