--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,24 +3,25 @@
             <title>Django Blog</title>
         </head>
         <body>
+            {% for post in posts %}
             <div>
-                <h1><a href="">Блог околовсяческий наук</a></h1>
+                 <p>published: {{ post.published_date }}</p>
+                <h1><a href="">Django Blog</a></h1>
+                <p>{{ post.text|linebreaks }}</p>
             </div>
-
+             {% endfor %}
+            
             <div>
                 <p>published: 14.06.2014, 12:14</p>
                 <h2><a href="">Разница в днях между двумя датами</a></h2>
-                <p>from datetime import datetime<p>
-                <p>def days_diff(date1, date2):<p>
-                <p>return abs((datetime(*date1)-datetime(*date2)).days)</p>
+                
             </div>
+           
 
             <div>
                 <p><h0>published: 14.06.2014, 12:14<h0></p>
                 <h2><a href="">Сколько пятниц 13 в году</a></h2>
-                <p>from datetime import datetime</p>
-		<p>def checkios(year):</p>
-		<p> return sum(datetime(year, month, 13).weekday() == 4 for month in range(1, 13))</p>
+                
             </div>
         </body>
     </html>
