--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,27 +1,14 @@
-<html>
-        <head>
-            <title>Django Blog</title>
-        </head>
-        <body>
-            {% for post in posts %}
-            <div>
-                 <p>published: {{ post.published_date }}</p>
-                <h1><a href="">Django Blog</a></h1>
+    {% extends 'blog/base.html' %}
+
+    {% block content %}
+        {% for post in posts %}
+            <div class="post">
+                <div class="date">
+                    {{ post.published_date }}
+                </div>
+                <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
                 <p>{{ post.text|linebreaks }}</p>
             </div>
-             {% endfor %}
-            
-            <div>
-                <p>published: 14.06.2014, 12:14</p>
-                <h2><a href="">Разница в днях между двумя датами</a></h2>
-                
-            </div>
-           
+        {% endfor %}
+    {% endblock content %} 
 
-            <div>
-                <p><h0>published: 14.06.2014, 12:14<h0></p>
-                <h2><a href="">Сколько пятниц 13 в году</a></h2>
-                
-            </div>
-        </body>
-    </html>
